svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    <key>: <label>
  ports:
    - protocol: TCP
      port: 80
      targetPort: <container-port>
